--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.application.name=demoapi
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
+
+# PostgreSQL datasource
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/demoapi}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:123456789}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate dialect for Postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
