--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate dialect for Postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1
+spring.flyway.enabled=false
