--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=1
 spring.flyway.enabled=false
+
+jwt.secret=Eltiemponuncamehaambiadoquizascontigonofueigual
+jwt.expiration=600000
